Gave sidebar bar less contrast, replaced logo.png with correct one

--- a/themes/cfo-subtheme/src/scss/layout/theme.scss
+++ b/themes/cfo-subtheme/src/scss/layout/theme.scss
@@ -20,13 +20,16 @@ body{
 	color:#231f20;
 }
 .sidenav__link{
-	color:#e9e9e9
+	color:#d4d4d4
 }
 .sidenav{
-	background-color:#231f20
+	background-color:#2b2627
+}
+.sidenav__section-title{
+	color:#e9e9e9
 }
 .sidenav__item{
-	border-bottom-color:#e9e9e9
+	border-bottom-color:#545454
 }
 .childpages__summary{
 	color: #fff;
